# color-term

./: Cargo.toml  LICENSE  README.md
src/: color.rs  lib.rs  no_color.rs  serde.rs  styles.rs
src/color/: classic_term.rs  eight_bit.rs  mod.rs  true_color.rs
