[package]
name = "style-term"
description = "String colorizer for terminals"
version = "1.0.0-beta"
edition = "2021"
authors = ["Wyatt Herkamp <wherkamp@gmail.com>"]
license = "MIT or Apache 2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0.81"
[features]
disable_color = []
default_four_bit = []